# discord_bot

./: .gitignore  Cargo.toml
src/: commands.rs  db.rs  main.rs  methods.rs  structs.rs
