[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1"
tokio = { version = "1.39.1", features = ["macros", "rt-multi-thread"] }
rusqlite = { version = "0.32.0", features = ["bundled"] }
