[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1"
tokio = { version = "1.39.1", features = ["macros", "rt-multi-thread"] }
rusqlite = { version = "0.32.0", features = ["bundled"] }
songbird = { version = "0.4", features = ["builtin-queue"] }
symphonia = { version = "0.5.2", features = ["aac", "mp3", "isomp4", "alac"] }
reqwest = { version = "0.12.5" }
dotenvy = { version = "0.15.7" }
